--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       </header>
 
       <div id="banner">
-        <span id="logo"></span>
+        <span id="weimaraner.jpg"></span>
 
         
         
