--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1> KAJMAR FARMS </h1>
-        <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
+        <p>{{Weimaraners and Artificial Semination}}</p>
       </header>
 
       <div id="banner">
