--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1> KAJMAR FARMS </h1>
-        <p>{{Weimaraners and Artificial Semination}}</p>
+        <p>Weimaraners and Artificial Semination</p>
       </header>
 
       <div id="banner">
