--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,7 @@
       </header>
 
       <div id="banner">
-        <span id="weimaraner.jpg"></span>
-
-        
-        
+        <span id="assets/images/weimaraner.jpg"></span>
       </div><!-- end banner -->
 
     <div class="wrapper">
