--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,11 @@
         <h1> KAJMAR FARMS </h1>
         <p>Weimaraners and Artificial Semination</p>
       </header>
+    
+    <div class="headers">
+    <img src="assets/images/weimaraners.jpg" alt="logo" />
+    <h1>My website name</h1>
+    </div>
 
       <div id="banner">
         <span id="assets/images/weimaraner.jpg"></span>
