--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,14 @@
 ---
 
 @import "";
+.header img{
+  float: left;
+  width: 100px;
+  height: 100px;
+}
+
+.header h1 {
+  position: relative;
+  top: 18px; 
+  left: 10px;
+}
