--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,13 +2,13 @@
 ---
 
 @import "";
-.header img{
+.headers img{
   float: left;
   width: 100px;
   height: 100px;
 }
 
-.header h1 {
+.headers h1 {
   position: relative;
   top: 18px; 
   left: 10px;
