--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,8 @@
 ---
 
 @import "{{ site.theme }}";
-headers{
-    margin :0 auto;
-    display:inline-block;
-    width: 850px;
+.page-header{
+color:#ffff;
+background-color:#A067AB;
+background-image:linear-gradient(120deg,#5073B8,#A067AB);
 }
