--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <header>
         <h1> KAJMAR FARMS </h1>
         <p>Weimaraners and Artificial Insemination</p>
-        <img src="assets/images/weimaraner.jpg" class="img-responsive" alt="">
+        <img src="assets/images/weimaraner.jpg" class="img-responsive" alt="" style="width:50px;height:50px;">
       </header>
    
 
