--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,9 @@
 
       <header>
         <h1> KAJMAR FARMS </h1>
-        <p>Weimaraners and Artificial Insemination</p>
+        <p>Weimaraners and Artificial Insemination
         <img src="assets/images/weimaraner.jpg" class="img-responsive" alt="" style="width:100px;height:100px;float:left">
+        </p>
       </header>
    
 
