--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
   <body>
 
       <header>
-        <h1> KAJMAR FARMS </h1>
-        <p>Weimaraners and Artificial Insemination
-        <img src="assets/images/weimaraner.jpg" class="img-responsive" alt="" style="width:100px;height:100px;float:left">
-        </p>
+        <h1> KAJMAR FARMS <img src="assets/images/weimaraner.jpg" class="img-responsive" alt="" style="width:100px;height:100px;float:left"></h1>
+        <p>Weimaraners and Artificial Insemination</p>
+        
+        
       </header>
    
 
