--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,7 @@ color:#ffff;
 background-color:#A067AB;
 background-image:linear-gradient(120deg,#5073B8,#A067AB);
 }
+
+img{
+  border-radius: 50%;
+}
