--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
    
 
       <div id="banner">
+        <h3> Oxford 59, Woodstock, Ontario, Canada. </h3>
       </div><!-- end banner -->
 
     <div class="wrapper">
