--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1> KAJMAR FARMS <img src="assets/images/weimaraner.jpg" class="img-responsive" alt="" style="width:70px;height:70px;float:left;border:3px solid black"></h1>
+        <h1> KAJMAR FARMS <img src="assets/images/weimaraner.jpg" class="img-responsive" alt="" style="width:70px;height:70px;float:left;border:3px solid black;vertical-align:middle;margin:0px 50px"></h1>
         <p>Weimaraners and Artificial Insemination</p>
         
         
