--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 header{
 color:#ffff;
 background-color:#A067AB;
-background-image:linear-gradient(120deg,#16a307,#0a5e01);
+background-image:linear-gradient(120deg,#818281,#313831);
 }
 
 img{
