--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,6 @@ background-color:#A067AB;
 background-image:linear-gradient(120deg,#818281,#313831);
 }
 
-img{
+img-responsive{
   border-radius: 50%;
 }
